Login CSS: Fixed bug where Vanier CSSA title would overflow when height is small.

--- a/CSSACollaborate/resources/css/pages/authentication/login.css
+++ b/CSSACollaborate/resources/css/pages/authentication/login.css
@@ -7,7 +7,7 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
     grid-template-areas: 
         "title form"
         "logo form";
